# tts-router

./: .gitignore  AGENTS.md  README.md  cli.py  extractors.py  playground.html  pyproject.toml  server.py
.claude/skills/: tts-router.md
.claude/skills/tts-router/: SKILL.md
.github/workflows/: publish.yml
backends/: __init__.py  base.py  mlx.py  vibevoice.py
skills/tts-router/: SKILL.md
tests/: test_cli.py  test_mlx_backend.py  test_server.py
